--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "root",
+  "private": true,
   "devDependencies": {
     "@types/invariant": "^2.2.30",
     "@types/react-native": "^0.57.65",
@@ -8,7 +9,6 @@
     "npm-run-all": "^4.1.5",
     "react-native": "^0.59.9",
     "react-native-speak": "^0.2.0",
-    "trash-cli": "^3.0.0",
     "typescript": "^3.5.2"
   },
   "workspaces": {
