--- a/packages/polly/package.json
+++ b/packages/polly/package.json
@@ -23,6 +23,9 @@
   "bugs": {
     "url": "https://github.com/ericlewis/react-native-speak-providers/issues"
   },
+  "dependencies": {
+    "aws-sdk": "^2.464.0"
+  },
   "devDependencies": {
     "@react-native-speak/base": "^0.1.0-alpha.0"
   }
