--- a/packages/native/package.json
+++ b/packages/native/package.json
@@ -9,7 +9,7 @@
   "homepage": "https://github.com/ericlewis/react-native-speak-providers/packages/native",
   "license": "MIT",
   "main": "build/main/index.js",
-  "typings": "build/main/index.d.ts",
+  "types": "build/main/index",
   "directories": {
     "lib": "src"
   },
