--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-native-speak/base",
-  "version": "0.2.1-alpha.0",
+  "version": "1.0.0",
   "description": "Base provider module for react-native-speak",
   "keywords": [
     "react-native-speak"
