--- a/packages/polly/package.json
+++ b/packages/polly/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-native-speak/polly",
-  "version": "0.2.1-alpha.0",
+  "version": "1.0.0",
   "description": "Amazon Polly provider module for react-native-speak",
   "keywords": [
     "react-native-speak"
@@ -27,6 +27,6 @@
     "aws-sdk": "^2.464.0"
   },
   "devDependencies": {
-    "@react-native-speak/base": "^0.2.1-alpha.0"
+    "@react-native-speak/base": "^1.0.0"
   }
 }
