--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "root",
   "private": true,
+  "dependencies": {
+    "react-native-fetch-polyfill": "1.1.2"
+  },
   "devDependencies": {
     "@types/invariant": "^2.2.30",
     "@types/node": "^12.6.2",
